# sparks

./: .gitignore  CMakeLists.txt  License.txt  Readme.markdown  startWebserver.bat
bin-win32/: mongoose.conf  mongoose.conf.in  startWebserver.bat.in
cmake/: FindAntTweakBar.cmake  FindAssImp.cmake  FindGLEW.cmake  FindGLFW.cmake  FindGLM.cmake  FindGLUI.cmake  FindSOIL.cmake  FindTBB.cmake  LuaBind.cmake  TargetDoc.cmake  freetype-gl-patch-rev226.patch  freetype-gl-patch-rev227.patch
data/models/: hook_cautery_new.3DS
data/scripts/: ESUModel.lua  Fonts.lua  LoadingState.lua  Navigation.lua  Sim.lua  button.lua  defaultScene.lua  glowTestScene.lua  loadRenderPasses.lua  loadShaders.lua  loadTextures.lua  main.lua  render.lua  testBoxScene.lua  utilityPasses.lua
data/scripts/states/: ButtonExampleState.lua  CalibrationState.lua  CoagModeState.lua  ContactAreaState.lua  CutModeState.lua  ESUPowerState.lua  ExampleState.lua  GlowExampleState.lua  InstructionsState.lua  LoadingState.lua  MenuState.lua  ModeInstructionState.lua  ShaderExampleState.lua  ShadowTestState.lua  SimulationState.lua  SparkExampleState.lua  StartupState.lua  TextureTestState.lua
data/scripts/states/Examples/: ButtonExampleState.lua  ShadowExampleState.lua  ShadowTestState.lua  SimulationState.lua  TextureTestState.lua
data/shaders/: TexturedSparkFragment.glsl  TexturedSparkVertex.glsl  base.vert  base2DTextureVertexShader.glsl  base3D.vert  base3DVertexShader.glsl  baseVertexShader.glsl  blur.frag  blurFragmentShader.glsl  blurHortVertexShader.glsl  blurVert.vert  blurVertVertexShader.glsl  color.frag  colorFragmentShader.glsl  colorVertexShader.glsl  constantColor.frag  contactArea.vert  contactAreaDisplayOverlay.frag  density3D.frag  density3DFragmentShader.glsl  distanceField.frag  error.frag  heightMap.vert  phong.frag  phongFragmentShader.glsl  phongVertexShader.glsl  rayCast.frag  rayCast.vert  rayCastFragmentShader.glsl  rayCastVertexShader.glsl  renameShaders.sh  shadowCaster.frag  shadowCaster.vert  simpleShadowExample.frag  simpleShadowExample.vert  simpleVertexShader.glsl  text.vert  textured.frag  texturedOverlayFragmentShader.glsl  texturedSpark.frag  (+12 more)
data/textures/: spark.psd  spark.tga
docs/: Scripting.markdown  Tutorial.lua
doxygen/: Doxyfile.in
ext/: .gitignore  README.txt
ext/FreeTypeGL/src/FREETYPEGL/: CMakeLists.txt  demo-atb-agg.c  demo-benchmark.c  demo-cube.c  demo-font.c  demo-gamma.c  demo-lcd.c  demo-makefont.c  demo-subpixel.c  demo-texture.c
ext/FreeTypeGL/src/FREETYPEGL-build/DebugLibs/: freetype-gl.lib
ext/FreeTypeGL/src/FREETYPEGL-build/MinSizeRel/: freetype-gl.lib
ext/FreeTypeGL/src/FREETYPEGL-build/RelWithDebInfo/: freetype-gl.lib
ext/FreeTypeGL/src/FREETYPEGL-build/ReleaseLibs/: freetype-gl.lib
ext/FreeTypeGL/src/FREETYPEGL/harfbuzz/: mat4.c  mat4.h  opengl.h  platform.h  shader.c  shader.h  texture-atlas.c  texture-atlas.h  vec234.h  vector.c  vector.h  vertex-attribute.c  vertex-attribute.h  vertex-buffer.c  vertex-buffer.h
ext/LibOVR/Lib/Mac/Xcode/Release/LibOVR.build/: libovr-all-target-headers.hmap  libovr-own-target-headers.hmap  libovr-project-headers.hmap  libovr.hmap
ext/ascensionTech_win64/: README.txt
ext/ascensionTech_win64/3DGuidanceAPI/: ATC3DG.h  ATC3DG.lib  ATC3DG64.lib
ext/cpplog/: cpplog.hpp
ext/freetype2/: README.txt  freetype250MT.lib  freetype250MT_D.lib
ext/glew-1.9.0/: GLEW-Sparks_README.txt
ext/lua-5.2.2/src/lua/src/: lua  luac  luaconf.h
ext/sixense/: README.txt
include/: AscensionTechInputDevice.hpp  DBMSpark.hpp  Display.hpp  ESUInput.hpp  ESUInputFromSharedMemory.hpp  EyeTracker.hpp  FileAssetFinder.hpp  Fluid.hpp  FontManager.hpp  GlfwInput.hpp  GuiEventPublisher.hpp  GuiEventSubscriber.hpp  IlluminationModel.hpp  Input.hpp  InputDevice.hpp  InputFactory.hpp  LSpark.hpp  LuaInterpreter.hpp  Material.hpp  Mesh.hpp  NetworkEyeTracker.hpp  PointSparkRenderable.hpp  Projection.hpp  RayCastVolume.hpp  RenderCommand.hpp  RenderPass.hpp  RenderTarget.hpp  Renderable.hpp  Scene.hpp  SceneFacade.hpp  SceneState.hpp  ScriptState.hpp  ShaderInstance.hpp  ShaderUniform.hpp  SixenseInputDevice.hpp  SlicedVolume.hpp  Spark.hpp  SparkFacade.hpp  State.hpp  StateManager.hpp  (+14 more)
include/esu/: ESUInput.hpp  ESUInputFromSharedMemory.hpp
include/input/: Input.hpp  InputFactory.hpp
include/states/: SimulationState.hpp
include/zspace/: ZSpaceInput.hpp  ZSpaceSystem.hpp
notes/: Planning.txt
src/: ArcBall.cpp  ArcBall.hpp  AscensionTechInputDevice.cpp  DBMSpark.cpp  DBMSpark.hpp  Display.cpp  Display.hpp  ESUInputFromSharedMemory.cpp  Exceptions.cpp  Exceptions.hpp  EyeTracker.cpp  EyeTracker.hpp  EyeTrackerNetwork.cpp  EyeTrackerZSpace.cpp  FileAssetFinder.cpp  FileAssetFinder.hpp  Fluid.cpp  Fluid.hpp  FontManager.cpp  GlfwInput.cpp  GuiEventPublisher.hpp  GuiEventSubscriber.hpp  IlluminationModel.cpp  Input.cpp  LSpark.cpp  LSpark.hpp  LuaInterpreter.cpp  LuaInterpreter.hpp  Material.cpp  Material.hpp  Mesh.cpp  Mesh.hpp  NetworkEyeTracker.cpp  Perspective.cpp  Perspective.hpp  PointSparkRenderable.cpp  PointSparkRenderable.h  PointSparkRenderable.hpp  Projection.cpp  Projection.hpp  (+56 more)
src/ESUServer/: ESUServerCGI.cpp
src/states/: SimulationState.cpp
src/tests/: RenderTests.cpp  UnitTests.cpp
www/: index.html
www/index.hyperesources/: index_hype_generated_script.js
www/win32/: ESUServerCGI.cgi
